--- a/tring_js/package.json
+++ b/tring_js/package.json
@@ -2,6 +2,9 @@
   "name": "tring_js",
   "module": "index.js",
   "type": "module",
+  "scripts": {
+    "dev": "node index.js"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/bun": "latest"
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.7",
     "joi": "^17.13.3",
     "json2csv": "^6.0.0-alpha.2",
     "knex": "^3.1.0",
