--- a/tring_js/package.json
+++ b/tring_js/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "tring_js",
-  "module": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "node index.js"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "csv-write-stream": "^2.0.0",
-    "csv-writer": "^1.6.0",
-    "d3-scale": "^4.0.2",
-    "data-fns": "^1.1.0",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "fast-csv": "^5.0.2",
-    "joi": "^17.13.3",
-    "json2csv": "^6.0.0-alpha.2",
-    "knex": "^3.1.0",
-    "mljs": "^8.0.9",
-    "pandas-js": "^0.2.4",
-    "papaparse": "^5.5.1",
-    "pg": "^8.13.1",
-    "plotly.js": "^3.0.0",
-    "plotly.js-dist": "^3.0.0",
-    "sequelize": "^6.37.5",
-    "ws": "^8.18.0"
-  }
+	"name": "tring_js",
+	"module": "index.js",
+	"type": "module",
+	"scripts": {
+		"dev": "node index.js",
+		"check": "biome check --unsafe --write index.js"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"dependencies": {
+		"csv-write-stream": "^2.0.0",
+		"csv-writer": "^1.6.0",
+		"d3-scale": "^4.0.2",
+		"data-fns": "^1.1.0",
+		"date-fns": "^4.1.0",
+		"dotenv": "^16.4.7",
+		"fast-csv": "^5.0.2",
+		"joi": "^17.13.3",
+		"json2csv": "^6.0.0-alpha.2",
+		"knex": "^3.1.0",
+		"mljs": "^8.0.9",
+		"pandas-js": "^0.2.4",
+		"papaparse": "^5.5.1",
+		"pg": "^8.13.1",
+		"plotly.js": "^3.0.0",
+		"plotly.js-dist": "^3.0.0",
+		"sequelize": "^6.37.5",
+		"ws": "^8.18.0"
+	}
 }
