--- a/tring_js/Justfile
+++ b/tring_js/Justfile
@@ -8,6 +8,7 @@ check:
 clean:
     @echo "Cleaning up files..."
     @rm -f *.png *.csv *.log
+    @find . -maxdepth 1 -type f -name "*.json" ! -name "package.json" ! -name "biome.json" ! -name "tsconfig.json" -delete
     @echo "Cleaned up files."
 
 clean_sql:
