--- a/tring_js/package.json
+++ b/tring_js/package.json
@@ -14,6 +14,9 @@
 		"typescript": "^5.0.0"
 	},
 	"dependencies": {
+		"axios": "^1.7.9",
+		"csv-parse": "^5.6.0",
+		"csv-stringify": "^6.5.2",
 		"csv-write-stream": "^2.0.0",
 		"csv-writer": "^1.6.0",
 		"d3-scale": "^4.0.2",
@@ -24,13 +27,17 @@
 		"joi": "^17.13.3",
 		"json2csv": "^6.0.0-alpha.2",
 		"knex": "^3.1.0",
+		"lodash": "^4.17.21",
 		"mljs": "^8.0.9",
+		"node-fetch": "^3.3.2",
+		"p-queue": "^8.1.0",
 		"pandas-js": "^0.2.4",
 		"papaparse": "^5.5.1",
-		"pg": "^8.13.1",
+		"pg": "^8.13.3",
 		"plotly.js": "^3.0.0",
 		"plotly.js-dist": "^3.0.0",
 		"sequelize": "^6.37.5",
+		"simple-statistics": "^7.8.7",
 		"ws": "^8.18.0"
 	}
 }
