--- a/tring_js/package.json
+++ b/tring_js/package.json
@@ -14,6 +14,7 @@
 		"typescript": "^5.0.0"
 	},
 	"dependencies": {
+		"@turf/turf": "^7.2.0",
 		"axios": "^1.7.9",
 		"csv-parse": "^5.6.0",
 		"csv-stringify": "^6.5.2",
@@ -29,15 +30,20 @@
 		"knex": "^3.1.0",
 		"lodash": "^4.17.21",
 		"mljs": "^8.0.9",
+		"moment": "^2.30.1",
+		"natural": "^8.0.1",
+		"node-cron": "^3.0.3",
 		"node-fetch": "^3.3.2",
 		"p-queue": "^8.1.0",
 		"pandas-js": "^0.2.4",
 		"papaparse": "^5.5.1",
 		"pg": "^8.13.3",
+		"pg-promise": "^11.10.2",
 		"plotly.js": "^3.0.0",
 		"plotly.js-dist": "^3.0.0",
 		"sequelize": "^6.37.5",
 		"simple-statistics": "^7.8.7",
+		"turf": "^3.0.14",
 		"ws": "^8.18.0"
 	}
 }
