--- a/tring_js/biome.json
+++ b/tring_js/biome.json
@@ -62,6 +62,7 @@
         "noUnusedLabels": "error",
         "noUnusedPrivateClassMembers": "error",
         "noUnusedVariables": "error",
+        "noUnusedImports": "error",
         "useArrayLiterals": "off",
         "useIsNan": "error",
         "useValidForDirection": "error",
