--- a/tring_js/package.json
+++ b/tring_js/package.json
@@ -24,7 +24,9 @@
 		"data-fns": "^1.1.0",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
+		"express": "^5.1.0",
 		"fast-csv": "^5.0.2",
+		"ioredis": "^5.6.0",
 		"joi": "^17.13.3",
 		"json2csv": "^6.0.0-alpha.2",
 		"knex": "^3.1.0",
@@ -41,9 +43,11 @@
 		"pg-promise": "^11.10.2",
 		"plotly.js": "^3.0.0",
 		"plotly.js-dist": "^3.0.0",
-		"sequelize": "^6.37.5",
+		"sequelize": "^6.37.7",
 		"simple-statistics": "^7.8.7",
+		"socket.io": "^4.8.1",
 		"turf": "^3.0.14",
+		"winston": "^3.17.0",
 		"ws": "^8.18.0"
 	}
 }
